[package]
name = "carboncopycat"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A copy of GNU's cat, with an easily-accessible API"
homepage = "https://github.com/pilleye/carboncopycat"
repository = "https://github.com/pilleye/carboncopycat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.155"
once_cell = "1.19.0"
owo-colors = "4.0.0"
thiserror = "1.0.61"

